# esp32-audio-player

./: README.md
firmware/: CMakeLists.txt  README.md  sdkconfig
firmware/components/: nvs_partition  spi_bus  spi_sd  wifi
firmware/components/audio/: CMakeLists.txt  libaudio.lf
firmware/components/audio/include/: flac.hh  wave.hh
firmware/components/audio/src/: flac.cc  wave.cc
firmware/components/basics/: CMakeLists.txt  libbasics.lf
firmware/components/basics/include/: base64.hh  error.hh  file.hh
firmware/components/basics/src/: base64.cc  error.cc  file.cc
firmware/components/player/: CMakeLists.txt  player.cc
firmware/components/player/include/: player.hh
firmware/components/stream/: CMakeLists.txt  libstream.lf
firmware/components/stream/include/: bit.hh
firmware/components/stream/src/: bit.cc
firmware/components/stream_buffer/: CMakeLists.txt  libstream_buffer.lf  stream_buffer.cc
firmware/components/stream_buffer/include/: stream_buffer.hh
firmware/main/: CMakeLists.txt  main.cc
firmware/main/include/: defs.hh  gpio.hh
hardware/: README.md
hardware/esp32_pcm56_st-s505/: esp32_pcm56_st-s505.kicad_pcb  esp32_pcm56_st-s505.kicad_prl  esp32_pcm56_st-s505.kicad_pro  esp32_pcm56_st-s505.kicad_sch  fp-lib-table
hardware/esp32_pcm56_st-s505/esp32_pcm56_st-s505.pretty/: RPDZN 5W7S.kicad_mod  RPDZN E10W.kicad_mod  Relay_2P2T_10x6mm_TE_IMxxG.kicad_mod
hardware/esp32_pcm56_st-s505/micro_sd_card_ctf-11081-p.pretty/: CTF-11081-P.kicad_mod
